--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-To be updated in a sec
+The react front end I was using was actually taken from someones else's repository, so it's not loading correctly here. Fix coming soon ;)
